<resources>
    <string name="app_name" translatable="false">TIIPS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="need_camera_permission">Need camera permission</string>
    <string name="nav_header_main_text" translatable="false">TIIPS Menu</string>
    <string name="nav_header_sub_text" translatable="false">HKRF Application</string>
    <string name="nav_group_inventory">Inventory</string>
    <string name="nav_group_indoor" translatable="false">IPS</string>
    <string name="nav_option_inventory">View Inventory</string>
    <string name="nav_option_reports">View Reports</string>
    <string name="nav_option_receive">Receive Inventory</string>
    <string name="nav_options_ship">Ship Inventory</string>
    <string name="nav_option_locate">Locate Item</string>
    <string name="nav_option_add">Manage Tags</string>
    <string name="nav_option_messages">Tag Messages</string>
    <string name="receive_inventory_title">Receive Inventory</string>
    <string name="ship_inventory_title">Ship Inventory</string>
    <string name="view_barcode_title">Generic Barcodes</string>
    <string name="view_current_title">View Current Inventory</string>
    <string name="view_past_title">View Past Inventory</string>
    <string name="view_category_title">View Categories</string>
    <string name="view_inventory_title">View Inventory</string>
    <string name="export_to_sheets_title">Export to Sheets</string>
    <string name="export_db_title">Export DB to Drive</string>
    <string name="import_db_title">Import DB to Drive</string>
    <string name="get_master_info">Get Master Info</string>
    <string name="title_activity_manage_tags">Manage Tags</string>
    <string name="title_activity_tag_messages">Tag Messages</string>
    <string name="content_text" translatable="false">Helping Kids Round First Application</string>
    <string name="home_header" translatable="false">Welcome to TIIPS!</string>
    <string name="choose_inventory_header">Select Table to View/Edit</string>
    <string name="choose_inv_current_button">Current Inventory</string>
    <string name="choose_inv_past_button">Past Inventory</string>
    <string name="choose_inv_item_button">Barcode Items</string>
    <string name="choose_inv_category_button">Categories</string>
    <string name="title_activity_view_inventory">ViewInventoryActivity</string>
    <string name="add_category_header">Add Category</string>
    <string name="add_category_barcode_hint">Barcode Prefix</string>
    <string name="view_category_detail_barcode">Barcode Prefix: </string>
    <string name="view_category_delete">Delete Category</string>
    <string name="barcode_prefix_general">XX</string>
    <string name="update_category_header">Update Category</string>
    <string name="update_category_barcode">Barcode Prefix Cannot be Changed</string>
    <string name="category_delete_fail">Category delete failed</string>
    <string name="category_delete_success">Category delete successful</string>
    <string name="view_inventory_item_detail_delete">Delete Barcode Item</string>
    <string name="barcode_item_delete_success">Barcode item delete successful</string>
    <string name="barcode_item_delete_failed">Barcode item delete failed</string>
    <string name="add_inventory_item_title">New Barcode Item</string>
    <string name="add_inv_barcode" translatable="false">XXXX</string>
    <string name="add_inv_hkrf" translatable="false">HKRF-XX-</string>
    <string name="update_item_header">Update Barcode Item</string>
    <string name="update_item_not_updatable">Barcode not updatable</string>
    <string name="view_current_inventory_detail_delete">Delete Current Inventory Record</string>
    <string name="current_inventory_delete_fail">Current inventory delete failed</string>
    <string name="current_inventory_update_fail">Current inventory updated failed</string>
    <string name="current_inventory_delete_success">Current inventory delete successful</string>
    <string name="update_current_header">Update Current Inv. Record</string>
    <string name="update_current_data_pick">Pick Date Received</string>
    <string name="update_current_successful">Update successful</string>
    <string name="current_search">Search Current Inventory</string>
    <string name="view_past_inventory_detail_delete">Delete Past Inventory Record</string>
    <string name="past_inventory_delete_fail">Past inventory delete failed</string>
    <string name="past_inventory_delete_success">Past inventory delete success</string>
    <string name="past_search">Search Past Inventory</string>
    <string name="title_activity_receive_inventory">ReceiveInventoryActivity</string>
    <string name="receive_inventory_header">Select Receive Inventory Action</string>
    <string name="receive_inventory_button_add">Add Inventory</string>
    <string name="receive_inventory_button_submit">Submit New Inventory</string>
    <string name="add_receive_header">Receive Inventory Dialog</string>
    <string name="add_receive_barcode_text" translatable="false">HKRF-</string>
    <string name="update_quantity_successful">Quantity updated</string>
    <string name="view_receive_inventory_detail_delete">Delete Receive Inventory Record</string>
    <string name="error_receive_not_deleted">Receive inventory delete failed</string>
    <string name="message_receive_deleted">Receive inventory delete successful</string>
    <string name="receive_detail_subtract" translatable="false">-</string>
    <string name="receive_detail_add" translatable="false">+</string>
    <string name="receive_detail_update">Update</string>
    <string name="submit_receive_date">Pick Date</string>
    <string name="submit_receive_header">Submit Received Inventory</string>
    <string name="message_submit_successful">Submit successful</string>
    <string name="title_activity_ship_inventory">ShipInventoryActivity</string>
    <string name="ship_inventory_list">Add To Shipment</string>
    <string name="ship_inventory_submit">Submit Shipment</string>
    <string name="ship_inventory_header">Create/Submit Shipments</string>
    <string name="add_ship_inventory_header">Add Item to Shipment</string>
    <string name="add_ship_inventory_success">Ship inventory success</string>
    <string name="override_current_inventory">Not enough quantity in current inventory. Override?</string>
    <string name="not_enough_qty">Not enough quantity in Current Inventory</string>
    <string name="ship_inventory_detail_delete">Remove ship inventory record</string>
    <string name="ship_inv_delete_fail">Delete ship inventory failed</string>
    <string name="ship_inv_delete_success">Delete ship inventory successful</string>
    <string name="ship_inventory_submit_header">Submit Shipment List</string>
    <string name="ship_inventory_submit_success">Shipment submitted successfully</string>
    <string name="title_activity_view_reports">View Reports</string>
    <string name="view_reports_header">Select Report to View</string>
    <string name="view_reports_barcode">Barcode Item Summary</string>
    <string name="view_reports_current">Current Inventory Summary</string>
    <string name="view_reports_past">Past Inventory Summary</string>
    <string name="view_reports_shipments">Shipment Summary</string>
    <string name="view_reports_sheets">Export to Sheets</string>
    <string name="view_reports_db">Database Actions</string>
    <string name="view_reports_export">Backup Database</string>
    <string name="view_reports_import">Update Database</string>
    <string name="view_reports_sure">This will replace the current database with the selected Drive database. Are you sure?</string>
    <string name="dialog_barcode_summary_header">Choose Barcode for Summary</string>
    <string name="barcode_summary_header">Barcode Summary Result</string>
    <string name="barcode_summary_inv">Inventory Summaries</string>
    <string name="barcode_summary_current">Qty in current: </string>
    <string name="barcode_summary_past">Qty in past: </string>
    <string name="barcode_summary_detail">Barcode Item Details</string>
    <string name="current_sum_header">Current Inventory Summary</string>
    <string name="current_sum_date">Dates received: </string>
    <string name="past_sum_header">Past Inventory Summary</string>
    <string name="past_sum_date">Dates shipped: </string>
    <string name="total_value">Total value: </string>
    <string name="donor_sum">Donors: </string>
    <string name="warehouse_sum">Warehouses: </string>
    <string name="items_sum"># distinct items: </string>
    <string name="shipment_summary_header">Shipment Summary</string>
    <string name="dialog_shipment_sum">Select Shipment Date</string>
    <string name="database_update_success">Successfully backed up database</string>
    <string name="database_update_create_error">Error while creating database update file</string>
    <string name="sqlite_mime_type" translatable="false">application/x-sqlite3</string>
    <string name="database_update_progress">Backing up database&#8230;</string>
    <string name="database_file_name">HKRF Database Backup </string>
    <string name="export_sheets_progress">Exporting to Google Sheets&#8230;</string>
    <string name="no_network">No network connection available.</string>
    <string name="permissions_message">This app needs to access your Google account (via Contacts).</string>
    <string name="google_play">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="current_sheets_file_name">HKRF Current Inventory</string>
    <string name="past_sheets_file_name">HKRF Past Inventory</string>
    <string name="item_sheets_file_name">HKRF Items</string>
    <string name="tab_barcode">Barcode Items</string>
    <string name="tab_current">Current Inventory</string>
    <string name="tab_past">Past Inventory</string>
    <string name="import_database_progress">Updating database&#8230;</string>
    <string name="import_database_error">Error while updating database</string>
    <string name="import_database_success">Database updated successfully</string>
    <string name="title_activity_locate_item">Locate Item</string>
    <string name="ble_not_enabled">BLE not enabled</string>
    <string name="ble_disconnected">Master disconnected</string>
    <string name="choose_item_locate">Read Tag Data</string>
    <string name="turn_buzzer_on">Find Item</string>
    <string name="unknown_device">Unknown device</string>
    <string name="scanning_devices">Scanning for BLE devices&#8230;</string>
    <string name="not_master">Please choose the device named "TIIPS"</string>
    <string name="connecting_to_master">Connecting to beacon&#8230;</string>
    <string name="reading_data">Reading Data&#8230;</string>
    <string name="location_of">Location of tag:</string>
    <string name="tag_alert">Turn buzzer on/off</string>
    <string name="tag_write">Tag buzzer started</string>
    <string name="writing_data">Writing Data&#8230;</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_scan">Scan Barcode</string>
    <string name="dialog_category">Category</string>
    <string name="dialog_quantity">Quantity</string>
    <string name="dialog_donor">Donor</string>
    <string name="dialog_warehouse">Warehouse</string>
    <string name="dialog_date_temp" translatable="false">YYYY-MM-DD</string>
    <string name="search_name">Search by name. Type to search</string>
    <string name="search_category">Search by category. Use drop-down box to select</string>
    <string name="search_date">Search by date</string>
    <string name="search_donor">Search by donor</string>
    <string name="search_barcode">Search by barcode number</string>
</resources>