<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_group_inventory">
        <menu>
            <item
                        android:id="@+id/nav_inventory"
                        android:title= "@string/nav_option_inventory"/>
            <item
                        android:id="@+id/nav_receive"
                        android:title="@string/nav_option_receive" />
            <item
                        android:id="@+id/nav_ship"
                        android:title="@string/nav_options_ship" />
            <item
                        android:id="@+id/nav_reports"
                        android:title="@string/nav_option_reports" />
        </menu>
    </item>
    <item android:title="@string/nav_group_indoor"
        android:id="@+id/nav_ips" >
        <menu >
            <item
                android:id="@+id/nav_locate"
                android:title="@string/nav_option_locate" />
            <item
                android:id="@+id/nav_add"
                android:title="@string/nav_option_add" />
            <item
                android:id="@+id/nav_messages"
                android:title="@string/nav_option_messages"/>
        </menu>
    </item>
</menu>
