<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_current_header" />

    <EditText
        android:id="@+id/update_current_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_quantity"
        android:inputType="number" />

    <EditText
        android:id="@+id/update_current_donor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_donor"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/update_current_warehouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_warehouse"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/update_current_button_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_current_data_pick" />

    <TextView
        android:id="@+id/update_current_date_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_date_temp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/update_current_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/update_current_button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_ok" />
    </LinearLayout>

</LinearLayout>