<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.helpingkidsroundfirst.hkrf.navigation_bar_activities.inventory.view_reports.ViewReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/view_reports_header"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <Button
            android:id="@+id/view_report_button_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_reports_barcode" />

        <Button
            android:id="@+id/view_report_button_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_reports_current" />

        <Button
            android:id="@+id/view_report_button_past"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_reports_past" />

        <Button
            android:id="@+id/view_report_button_shipments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_reports_shipments" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_reports_db"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <Button
            android:id="@+id/view_report_button_sheets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_reports_sheets" />

        <Button
            android:id="@+id/view_report_button_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_reports_export" />

    </LinearLayout>
</ScrollView>
