<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_receive_header" />

    <EditText
        android:id="@+id/submit_receive_dialog_donor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_donor"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/submit_receive_dialog_warehous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_warehouse"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/submit_receive_dialog_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_receive_date" />

    <TextView
        android:id="@+id/submit_receive_dialog_date_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_date_temp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_receive_dialog_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/submit_receive_dialog_button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_ok" />
    </LinearLayout>

</LinearLayout>