<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/choose_inv_layout">

    <TextView
        android:text="@string/choose_inventory_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center" />

    <Button
        android:text="@string/choose_inv_current_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_inv_butt_current" />

    <Button
        android:text="@string/choose_inv_past_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_inv_past_button" />

    <Button
        android:text="@string/choose_inv_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_inv_item_button" />

</LinearLayout>