<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/ship_inventory_submit_header"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/ship_inventory_submit_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_receive_date" />

    <TextView
        android:id="@+id/ship_inventory_submit_date_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_date_temp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ship_inventory_submit_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/ship_inventory_submit_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_ok" />
    </LinearLayout>
</LinearLayout>