<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.helpingkidsroundfirst.hkrf.navigation_bar_activities.inventory.view_inventory.past_inventory.ViewPastSearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/past_search"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/past_search_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_name"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/past_search_cat_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_category" />

        <Spinner
            android:id="@+id/past_search_cat_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/past_search_date_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_date" />

        <Spinner
            android:id="@+id/past_search_date_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/past_search_donor_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_donor" />

        <Spinner
            android:id="@+id/past_search_donor_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/past_search_barcode_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_barcode" />

        <Spinner
            android:id="@+id/past_search_barcode_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/past_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/past_search" />
    </LinearLayout>
</ScrollView>