<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receive_inventory_header"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <Button
        android:id="@+id/receive_inventory_button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receive_inventory_button_add" />

    <Button
        android:id="@+id/receive_inventory_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receive_inventory_button_submit" />
</LinearLayout>